# SerialPlotter

./: .gitignore  .gitmodules  Buffers.h  CMakeLists.txt  DSP.sln  DSP.vcxproj  DSP.vcxproj.filters  Monitor.h  README.md  Serial.cpp  Serial.h  buffer1.cpp  dft.c  imgui.ini  main.cpp
include/GLFW/: glfw3.h
lib/x64/: libfftw3-3.lib
lib/x64/Debug/: iir_static.lib
lib/x64/Release/: iir_static.lib
src/: Buffers.h  Console.cpp  Console.h  FFT.cpp  FFT.h  MainWindow.cpp  MainWindow.h  Monitor.cpp  Monitor.h  Serial.cpp  Serial.h  Settings.cpp  Settings.h  Widgets.h  main.cpp  main.h  tests.h
